fixed the annoying element flash when clicked on iOS

--- a/client/index.scss
+++ b/client/index.scss
@@ -87,3 +87,8 @@ body {
     fill: #fff;
   }
 }
+
+/* iOS fixes */
+* {
+  -webkit-tap-highlight-color: transparent;
+}
